#38 - implemented health check endpoint and runners
